--- a/css/default.css
+++ b/css/default.css
@@ -44,6 +44,7 @@ img {
   max-width: 20rem;
   padding: 1rem;
   text-align: center;
+  box-shadow: 0px 20px 30px hsla(220, 15%, 55%, 0.2);
 }
 
 .card-image {
