--- a/css/default.css
+++ b/css/default.css
@@ -26,6 +26,7 @@ body {
   font: 400 var(--font-body);
   background-color: var(--color-light-gray);
   margin: 1.6rem;
+  overflow: hidden;
 }
 
 img {
@@ -47,16 +48,17 @@ img {
   box-shadow: 0px 20px 30px hsla(220, 15%, 55%, 0.2);
 }
 
-.card-image {
+.card img {
   border-radius: 10px;
 }
 
-.card-content {
-  padding: 0.5rem;
-}
-
-.card-heading {
+.card h1 {
   color: var(--color-dark-blue);
   font-size: 1.5rem;
   font-weight: 700;
+}
+
+.card h1,
+.card p {
+  padding: 0 0.3em;
 }
